# polynom

./: .gitignore  CMakeLists.txt  LICENSE  README.md  polynom.g4
include/: list.h  monom.h  polynom.h  simple_list.h
include/parser/: polynomBaseVisitor.h  polynomLexer.h  polynomParser.h  polynomUserVisitor.h  polynomVisitor.h  polynomeUserVisitor.h
samples/: CMakeLists.txt  lb_samp.cpp
src/: CMakeLists.txt  monom.cpp  polynom.cpp  simple_list.cpp
test/: CMakeLists.txt  test_list.cpp  test_monom.cpp  test_polynom.cpp
